<resources>
    <string name="app_name">ShopNow</string>
    <string name="dashboard_fragment">Dashboard</string>
    <string name="ok">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- XMSG: Message to the user when no email client is available on their device. -->
    <string name="no_email_client">There are no email clients installed.</string>

    <!-- XFLD: Username field. -->
    <string name="username">Username</string>

    <!-- XFLD: Password field. -->
    <string name="password">Password</string>

    <!-- XFLD: Remember username feild. -->
    <string name="remember_username">Remember username</string>

    <!-- XBUT: Sign In button text. -->
    <string name="sign_in">Sign In</string>

    <!-- XLNK: Forgot username or password link to webpage. -->
    <string name="forgot">Forgot username or password?</string>

    <!-- XBUT: OK button. -->


    <string name="ariba_supplier">Ariba Supplier</string>


    <string name="action_settings">Settings</string>


    <string name="user_profile">User Profile</string>
    <string name="sign_out">Sign Out</string>


    <!--Navigation Drawer Items-->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_orders">Orders</string>
    <string name="nav_item_otp">One-Time Password</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_custSupport">Customer Support</string>
    <string name="nav_item_notifications">Notifications</string>
    <string name="nav_item_eula">End User Licesne Agreement</string>
    <string name="nav_item_touse">Terms of Use</string>
    <string name="nav_item_privacystmt">Privacy Statement</string>
    <string name="nav_item_participationAgreement">Participation Agreement</string>
    <string name="nav_item_sendAppLogs">Send Application Logs</string>
    <string name="nav_item_signOut">Sign out</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_tile_header_placeholer">header</string>
    <string name="dashboard_tile_amount_placeholer">$100</string>
    <string name="dashboard_tile_date_placeholer">1st Jan 2016</string>
    <string name="dashboard_line_chart_time_header">Purchase Orders</string>
    <string name="dashboard_bar_chart_currency_header">USD</string>
    <string name="dashboard_bar_chart_time_header">Invoices Aging</string>
    <string name="dashboard_chart_default_money">$ 0</string>
    <string name="dashboard_tile_setting_header">Orders and invoices</string>
    <string name="dashboard_notification_header_name">Robert James</string>
    <string name="dashboard_notification_header_time_placeholder">7:47 PM</string>
    <string name="dashboard_notification_detail_number_placeholder">65764</string>
    <string name="dashboard_notification_detail_number_detail_placeholder">Lab Incorporate</string>
    <string name="dashboard_notification_note_placeholder">We need to make few adjustments to the invoice sent last week</string>
    <string name="dashboard_titledrop_textone">All Customer</string>
    <string name="dashboard_titledrop_texttwo">My Customer</string>


    <!--Text for ANMobileUserAction API-->
    <string name="small">SMALL</string>
    <string name="medium">MEDIUM</string>
    <string name="large">LARGE</string>
    <string name="unknown">UNKNOWN</string>
    <string name="label_sent">Sent</string>
    <string name="label_rejected">Rejected</string>
    <string name="label_aproved">Approved</string>
    <string name="label_paid">Paid</string>


    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_orders</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_custSupport</item>
        <item>@string/nav_item_signOut</item>
    </string-array>

    <string-array name="elements_home"></string-array>
    <string-array name="elements_orders"></string-array>
    <string-array name="elements_notifications"></string-array>
    <string-array name="elements_settings"></string-array>
    <string-array name="elements_custSupport"></string-array>
    <string-array name="elements_signOut"></string-array>

    <string name="choosecustomer">Choose up to 8 customers</string>
    <string name="pushnotifications">Push Notifications</string>
    <string name="touchid">Touch ID</string>
    <string name="mycustomers">My Customers</string>
    <string name="login_screen_unauthorised">User or Password did not match</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email ID</string>
    <string name="signup_email">Email ID</string>
    <string name="signup_password">Password (min 6 Characters)</string>
    <string name="signup_pincode">Area Pincode</string>

    <string name="signup_address">Address</string>
    <string name="signup_name">Full Name</string>
    <string name="signup_phone">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="signup_dob">Date of Birth</string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Mobile number or email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="error_phone_digit">This field is required</string>

    <string name="enterphonenumber">Enter your phone number</string>
    <string name="enteremailaddress">Enter your email Address</string>
    <string name="enterPasswordText">Enter your password</string>
    <string name="enterPassword">Enter your password</string>
    <string name="selectcountry">Select country</string>
    <string name="sending_sms">We\'re sending an SMS to</string>
    <string name="inprogress">Verification in \nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>


    <string name="cancelDialog">Cancel</string>

</resources>
