<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="@color/c34"
    tools:context="com.oneapplab.shopnow.activities.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="1">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_weight=".1"
            android:src="@drawable/arrow_back_black"/>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight=".9"
            android:text="Create account for Shop Now"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>


    <com.digits.sdk.android.DigitsAuthButton
        android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"/>



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/layout_border">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/CustomTextInputLayoutStyle.ErrorTextStyle"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_marginTop="@dimen/dp_10">

                <AutoCompleteTextView
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:background="@drawable/edt_bg_selector"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                app:errorTextAppearance="@style/error_appearance"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_phone"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:background="@drawable/edt_bg_selector"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/emailedt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/signup_phone"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@drawable/edt_bg_selector"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/edt_bg_selector"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_dob"
                    android:text="yyyy-mm-dd"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:maxLines="1"
                    android:background="@drawable/edt_bg_selector"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    <RadioGroup
        android:id="@+id/businessGroup"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:checked="false"
            android:paddingRight="30dp"
            android:text="User"/>
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:checked="false"

            android:text="Shop"/>
    </RadioGroup>



    <LinearLayout
        android:id="@+id/email_login_form2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@drawable/layout_border"
        android:visibility="gone"
        android:layout_weight="3">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Join Type:"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="User"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/rounded_gradients_button"
                android:layout_weight="1"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/takePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Shop"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/rounded_gradients_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_login_form3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@drawable/layout_border">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_address"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text|textMultiLine"
                android:background="@drawable/edt_bg_selector" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/c10"
        android:textColor="@color/c35"
        android:text="@string/action_sign_up"
        android:textStyle="bold" />


</LinearLayout>


    </ScrollView>
