<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:orientation="vertical"
    android:background="@color/c34"
    tools:context="com.oneapplab.shopnow.activities.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/login_form"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_border">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="user@shop.com" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="user123"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_item2"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_alignParentEnd="true"
                    android:theme="@style/BrandedSwitch.control"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:longClickable="false"

                    />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember me"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:layout_marginLeft="30dp"
                    android:gravity="right"/>




            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/c10"
                android:textColor="@color/c35"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />




        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="Or"/>



        <LinearLayout
            android:id="@+id/email_login_form2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/layout_border">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/facebook_sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/facebook2"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/gmail_sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/googlre"
                    android:layout_weight="1"/>


            </LinearLayout>





        </LinearLayout>



    </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c30"
            android:layout_marginTop="130dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Want new Account?"
                android:scaleType="center"
                android:textSize="@dimen/dp_12"
                android:layout_gravity="center_horizontal|center"
                android:textColor="@color/c35"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="SIgn Up"
                android:textSize="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center_horizontal|right"
                android:background="@color/c2" />




        </FrameLayout>








</LinearLayout>

</LinearLayout>
