<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oneapplab.shopnow.activities.VerificationActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"

        android:weightSum="1">

        <ImageButton
            android:id="@+id/btn_close_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_white_24dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight=".9"
            android:text="Registration"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sending_sms"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/numberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:hint="Enter Number"
            android:text="+46123456789"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/inputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/entercode"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/inputCode"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:inputType="phone"/>


                <Button
                    android:id="@+id/codeInputButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:text="Next"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/resend_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Resend via call ()"
                    android:textColor="@color/sendotp_grey"
                    android:textSize="16sp"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressIndicator"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:indeterminateDrawable="@drawable/progress"
                android:indeterminateDuration="3000"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/checkmarkImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/checkmark"
                android:visibility="invisible"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text= "@string/inprogress"
            android:textColor="@color/sendotp_light_grey"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>